에어비앤비 광고까지

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
     </header>
     <main>
         <section>
-            <div class="sec__title"></div>
+            <div class="sec__title">에어비앤비 둘러보기</div>
             <div class="card__box">
                 <div class="card">
-                    <div class="card__img1 card__img"></div>
-                    <div class="card_content"></div>
+                    <div class="card__img"></div>
+                    <div class="card__content">숙소 및 부티크 호텔</div>
                 </div>
                 <div class="card">
-                    <div class="card__img1 card__img"></div>
-                    <div class="card_content"></div>
+                    <div class="card__img"></div>
+                    <div class="card__content">트립</div>
                 </div>
                 <div class="card">
-                    <div class="card__img1 card__img"></div>
-                    <div class="card_content"></div>
+                    <div class="card__img"></div>
+                    <div class="card__content">어드벤처</div>
                 </div>
                 <div class="card">
-                    <div class="card__img1 card__img"></div>
-                    <div class="card_content"></div>
+                    <div class="card__img"></div>
+                    <div class="card__content">레스토랑</div>
                 </div>
             </div>
         </section>
@@ -92,19 +92,19 @@
         </section>
 
         <section>
-            <div class="sec__title"></div>
+            <div class="sec__title">추천 여행지</div>
             <div class="choo__box">
-                <div class="choo__img1"></div>
-                <div class="choo__img2"></div>
-                <div class="choo__img3"></div>
-                <div class="choo__img4"></div>
-                <div class="choo__img5"></div>
+                <div class="choo__img"></div>
+                <div class="choo__img"></div>
+                <div class="choo__img"></div>
+                <div class="choo__img"></div>
+                <div class="choo__img"></div>
             </div>
         </section>
 
         <section>
-            <div class="sec__title"></div>
-            <div class="sec__content"></div>
+            <div class="sec__title">에어비앤비 플러스를 만나보세요!</div>
+            <div class="sec__content">퀄리티와 인테리어 디자인이 검증된 숙소 컬렉션</div>
             <div class="ad2"></div>
         </section>
 
@@ -112,7 +112,7 @@
             <div class="sec__title"></div>
             <div class="home__box">
                 <div class="home">
-                    <div class="home__img1"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="home">
-                    <div class="home__img2"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img3"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img4"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img5"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img6"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img7"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
@@ -197,7 +197,7 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img8"></div>
+                    <div class="home__img"></div>
                     <div class="home_info">
                         <div class="info1"></div>
                         <div class="info2"></div>
