--- a/index.html
+++ b/index.html
@@ -109,105 +109,100 @@
         </section>
 
         <section>
-            <div class="sec__title"></div>
+            <div class="sec__title">전 세계 숙소</div>
             <div class="home__box">
                 <div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
-                        <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
                 </div>
                 <div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
                 </div>
                 <div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
-                </div>
-                <div class="home">
+                </div><div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
-                </div>
-                <div class="home">
+                </div><div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
-                </div>
-                <div class="home">
+                </div><div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
-                </div>
-                <div class="home">
+                </div><div class="home">
                     <div class="home__img"></div>
                     <div class="home_info">
-                        <div class="info1"></div>
-                        <div class="info2"></div>
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
                         <div class="info3">
-                            <span class="star"></span>
-                            <span class="count"></span>
-                            <span class="type"></span>
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img"></div>
+                    <div class="home_info">
+                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
+                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">185</span>
+                            <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
     </main>
