이미지 변경 완료

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
             <div class="sec__title">에어비앤비 둘러보기</div>
             <div class="card__box">
                 <div class="card">
-                    <div class="card__img"></div>
+                    <div class="card__img card__img1"></div>
                     <div class="card__content">숙소 및 부티크 호텔</div>
                 </div>
                 <div class="card">
-                    <div class="card__img"></div>
+                    <div class="card__img card__img2"></div>
                     <div class="card__content">트립</div>
                 </div>
                 <div class="card">
-                    <div class="card__img"></div>
+                    <div class="card__img card__img2"></div>
                     <div class="card__content">어드벤처</div>
                 </div>
                 <div class="card">
-                    <div class="card__img"></div>
+                    <div class="card__img card__img4"></div>
                     <div class="card__content">레스토랑</div>
                 </div>
             </div>
@@ -94,11 +94,11 @@
         <section>
             <div class="sec__title">추천 여행지</div>
             <div class="choo__box">
-                <div class="choo__img"></div>
-                <div class="choo__img"></div>
-                <div class="choo__img"></div>
-                <div class="choo__img"></div>
-                <div class="choo__img"></div>
+                <div class="choo__img choo__img1"></div>
+                <div class="choo__img choo__img2"></div>
+                <div class="choo__img choo__img3"></div>
+                <div class="choo__img choo__img4"></div>
+                <div class="choo__img choo__img5"></div>
             </div>
         </section>
 
@@ -112,7 +112,7 @@
             <div class="sec__title">전 세계 숙소</div>
             <div class="home__box">
                 <div class="home">
-                    <div class="home__img"></div>
+                    <div class="home__img home__img1"></div>
                     <div class="home_info">
                         <div class="info1">오두막 . BALIAN BEACH, BALI</div>
                         <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
@@ -124,85 +124,84 @@
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img"></div>
+                    <div class="home__img home__img2"></div>
                     <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
+                        <div class="info1">키클라데스 주택 · 이아(OIA)</div>
+                        <div class="info2">Unique Architecture Cave House</div>
                         <div class="info3">
                             <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
+                            <span class="count">188</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img home__img3"></div>
+                    <div class="home_info">
+                        <div class="info1">성 · 트웬티나인 팜스(TWENTYNINE PALMS)</div>
+                        <div class="info2">Tile House</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">367</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img home__img4"></div>
+                    <div class="home_info">
+                        <div class="info1">검증됨 · 케이프타운</div>
+                        <div class="info2">Modern, Chic Penthouse with Mountain, City & Sea Views</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">177</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img home__img5"></div>
+                    <div class="home_info">
+                        <div class="info1">아파트 전체 · 마드리드(MADRID)</div>
+                        <div class="info2">솔광장에 위치한 개인 스튜디오</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">459</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img home__img6"></div>
+                    <div class="home_info">
+                        <div class="info1">집 전체 · HUMAC</div>
+                        <div class="info2">Vacation house in etno-eco village Humac</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">119</span>
+                            <span class="type">슈퍼호스트</span>
+                        </div>
+                    </div>
+                </div><div class="home">
+                    <div class="home__img home__img7"></div>
+                    <div class="home_info">
+                        <div class="info1">개인실 · 마라케시</div>
+                        <div class="info2">The Cozy Palace</div>
+                        <div class="info3">
+                            <span class="star"> ★ ★ ★ ★ ★</span>
+                            <span class="count">559</span>
                             <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
                 </div>
                 <div class="home">
-                    <div class="home__img"></div>
+                    <div class="home__img8"></div>
                     <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
+                        <div class="info1">게스트용 별채 전체 · 로스앤젤레스</div>
+                        <div class="info2">Private Pool House with Amazing Views!</div>
                         <div class="info3">
                             <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
-                            <span class="type">슈퍼호스트</span>
-                        </div>
-                    </div>
-                </div><div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
-                        <div class="info3">
-                            <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
-                            <span class="type">슈퍼호스트</span>
-                        </div>
-                    </div>
-                </div><div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
-                        <div class="info3">
-                            <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
-                            <span class="type">슈퍼호스트</span>
-                        </div>
-                    </div>
-                </div><div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
-                        <div class="info3">
-                            <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
-                            <span class="type">슈퍼호스트</span>
-                        </div>
-                    </div>
-                </div><div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
-                        <div class="info3">
-                            <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
-                            <span class="type">슈퍼호스트</span>
-                        </div>
-                    </div>
-                </div><div class="home">
-                    <div class="home__img"></div>
-                    <div class="home_info">
-                        <div class="info1">오두막 . BALIAN BEACH, BALI</div>
-                        <div class="info2">BAKUAB TREEHOUSE w beautiful pool</div>
-                        <div class="info3">
-                            <span class="star"> ★ ★ ★ ★ ★</span>
-                            <span class="count">185</span>
+                            <span class="count">170</span>
                             <span class="type">슈퍼호스트</span>
                         </div>
                     </div>
                 </div>
-                
             </div>
         </section>
     </main>
